<resources>
    <string name="app_name">Lime</string>

    <string name="service_accessibility">Lime Accessibility Service</string>
    <string name="service_notifications">Lime Notifications Service</string>

    <string name="close_button_description">Close Button</string>
    <string name="back_button_description">Back Button</string>
    <string name="settings_button_description">Settings Button</string>
    <string name="app_icon_description">App Icon</string>
    <string name="addToHome_icon_description">Add to home Icon</string>
    <string name="removeFromHome_icon_description">Remove from home Icon</string>
    <string name="showApp_icon_description">Show app Icon</string>
    <string name="hideApp_icon_description">Hide app Icon</string>
    <string name="showAppInfo_icon_description">Show app info Icon</string>
    <string name="uninstall_icon_description">Uninstall Icon</string>
    <string name="moveUp_icon_description">Move up Icon</string>
    <string name="moveDown_icon_description">Move down Icon</string>
    <string name="renameApp_icon_description">Rename Icon</string>
    <string name="changeAppIcon_icon_description">Choose App Icon Icon</string>
    <string name="loading_icon_description">Loading Icon</string>
    <string name="recoverOriginalName_icon_description">Use original name Icon</string>
    <string name="recoverOriginalIcon_icon_description">Use original icon Icon</string>
    <string name="reorder_icon_description">Reorder home apps Icon</string>


    <string name="contextMenu_addToHome">Add to Home</string>
    <string name="contextMenu_removeFromHome">Remove from Home</string>
    <string name="contextMenu_hideApp">Hide app</string>
    <string name="contextMenu_showApp">Show app</string>
    <string name="contextMenu_appInfo">App info</string>
    <string name="contextMenu_uninstall">Uninstall</string>
    <string name="contextMenu_renameApp">Rename</string>
    <string name="contextMenu_changeAppIcon">Change Icon</string>
    <string name="contextMenu_reorder">Reorder home apps</string>


    <string name="renameMenu_hint">Rename to</string>
    <string name="renameMenu_recoverOriginalName">Use original name</string>

    <string name="changeAppIconMenu_title">Choose an icon pack</string>
    <string name="changeAppIconMenu_hint">Search icon</string>
    <string name="changeAppIconMenu_noIconPacks">Download icon packs from the store to use this feature</string>
    <string name="changeAppIconMenu_recoverOriginalIcon">Use original icon</string>
    <string name="changeAppIconMenu_noSearchResults">There are no results.</string>
    <string name="changeAppIconMenu_searchTip">Tip: if you don\'t find any icon when searching by the app\'s name, try searching with related words and find an icon that helps you identify the application.</string>

    <string name="reorderMenu_title">Reorder home apps</string>


    <string name="drawer_searchHint">Search Apps</string>
    <string name="drawer_letter">B</string>


    <string name="placeholder_time">19:35</string>
    <string name="placeholder_date">Monday, 23 August</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Lime Launcher Settings</string>
    <string name="title_activity_settings_pro">Lime Launcher PRO Settings</string>


    <string name="preference_rate_app">Enjoying Lime Launcher? Rate us!</string>

    <string name="preference_title_general">General</string>
    <string name="preference_title_home">Home</string>
    <string name="preference_title_gestures">Home gestures</string>
    <string name="preference_title_drawer">Drawer</string>
    <string name="preference_title_date">Date</string>
    <string name="preference_title_time">Time</string>

    <string name="preference_general_show_hidden_apps">Show hidden apps</string>
    <string name="preference_general_hide_status_bar">Hide status bar</string>
    <string name="preference_general_notification_badges">Choose notification badge type</string>
    <string name="preference_general_change_wallpaper_daily">Change wallpaper daily</string>
    <string name="preference_general_also_change_lockscreen">Also change the lock screen</string>
    <string name="preference_general_is_text_black">Use black text</string>
    <string name="preference_general_dim_wallpaper">Dim wallpaper</string>
    <string name="preference_general_date_time_scale">Date and Time scale</string>
    <string name="preference_general_icon_scale">Icon scale</string>
    <string name="preference_general_text_scale">Text scale</string>
    <string name="preference_general_icon_pack">Choose icon pack</string>
    <string name="preference_general_icon_pack_summary">Loading icon packs...</string>


    <string name="preference_home_show_icons">Show icons</string>
    <string name="preference_home_show_in_grid">Use app grid</string>
    <string name="preference_home_show_labels">Show labels</string>
    <string name="preference_home_alignment">Home alignment</string>
    <string name="preference_home_swipe_up_gesture">Swipe up gesture action</string>
    <string name="preference_home_swipe_up_app">Select the swipe up app</string>
    <string name="preference_home_swipe_up_gesture_description">This gesture only works on the home screen.</string>
    <string name="preference_home_swipe_down_gesture">Swipe down gesture action</string>
    <string name="preference_home_swipe_down_app">Select the swipe down app</string>
    <string name="preference_home_swipe_down_gesture_description">This gesture only works on the home screen.</string>
    <string name="preference_home_double_tap_gesture">Double tap gesture action</string>
    <string name="preference_home_double_tap_app">Select the double tap app</string>
    <string name="preference_home_double_tap_gesture_description">This gesture only works on an empty space in the home screen.</string>

    <string name="preference_drawer_show_icons">Show icons</string>
    <string name="preference_drawer_show_in_grid">Use app grid</string>
    <string name="preference_drawer_show_labels">Show labels</string>
    <string name="preference_drawer_auto_show_keyboard">Automatically show keyboard</string>
    <string name="preference_drawer_auto_show_keyboard_subtitle">Show the keyboard automatically when entering the drawer.</string>
    <string name="preference_drawer_auto_open_apps">Automatically open apps</string>
    <string name="preference_drawer_auto_open_apps_subtitle">While searching, if there is only one app that matches the query, it will automatically open.</string>
    <string name="preference_drawer_show_search_bar">Show search bar</string>
    <string name="preference_drawer_show_alphabet_filter">Show alphabet filter</string>

    <string name="preference_date_visible">Show date</string>
    <string name="preference_date_format">Date format</string>
    <string name="preference_date_click_app">Choose app to open on click</string>

    <string name="preference_time_visible">Show time</string>
    <string name="preference_time_format">Time format</string>
    <string name="preference_time_click_app">Choose app to open on click</string>

    <string name="preference_get_pro">Get Lime Launcher PRO</string>
    <string name="preference_get_pro_short">PRO</string>


    <!-- LOCK SCREEN -->
    <string name="accessibility_service_description">The accessibility permission is required to enable double tap to lock. Any data acquired by Lime Launcher via this service will not leave your device.</string>
    <string name="lock_layout_description">lock</string>

    <string name="lock_screen_menu_title">Permission to lock screen</string>
    <string name="lock_screen_menu_disclosure">Please turn on Lime Launcher\'s accessibility service in your device\'s settings to enable this feature.\n\nPlease note that this service is only used to let you turn off your device\'s screen using the double tap or swipe gestures.\n\nOur accessibility service does not collect or share any data.</string>
    <string name="lock_screen_menu_enable_button">Enable</string>
    <string name="lock_screen_menu_cancel_button">Cancel</string>

    <string name="buy_pro_menu_title">Get Lime Launcher PRO</string>
    <string name="buy_pro_menu_disclosure">Upgrade to Lime Launcher Pro for more personalization options!\n\n- Customize icons with Icon Packs.\n- Hide the status bar to maximize screen space.\n- Arrange your apps in a grid for easy access.\n- Customize gesture actions to launch your most-used apps with ease.\n- Lock your screen with a double tap or swipe gesture (available on Android 9 Pie onwards).\n\nAnd more! Purchase it one time and enjoy it forever!</string>
    <string name="buy_pro_menu_enable_button">Get PRO</string>
    <string name="buy_pro_menu_cancel_button">Cancel</string>

    <string name="notification_access_menu_title">Access notifications</string>
    <string name="notification_access_menu_disclosure">Please give Lime Launcher\'s access to the notification service in your device\'s settings to enable this feature.\n\nPlease note that this service is only used to show you notification badges besides your apps.\n\nLime Launcher does not collect or share any data.</string>
    <string name="notification_access_menu_enable_button">Grant</string>
    <string name="notification_access_menu_cancel_button">Cancel</string>

    <!-- Mango Launcher promo -->
    <string name="mango_promo_title">Check out the new Mango Launcher!</string>
    <string name="mango_promo_description">A brand new launcher, more performant &amp; customizable than ever, packed with new features and improvements.\n\nIf you bought Lime Launcher, reach out and we\'ll send you a promo code to unlock all features of Mango Launcher for free. Limited stock. First come, first served.\n\nLime Launcher will no longer receive updates going forward, but you can keep using it as is forever.</string>
    <string name="mango_promo_cta">View on Play Store</string>
    <string name="mango_promo_dismiss">Dismiss</string>
    <string name="mango_promo_screenshot_description">Mango Launcher screenshot</string>
    <string name="mango_promo_url">https://play.google.com/store/apps/details?id=app.pinya.mango</string>

</resources>