<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/chooseAppIconMenu_titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="32dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="@string/app_icon_description"
                android:src="@mipmap/main_icon" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/closeChooseAppIconMenuButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="18dp"
                android:background="@drawable/icon_close"
                android:contentDescription="@string/close_button_description"
                tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/chooseIconPackContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/chooseAppIconMenu_titleBar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/changeAppIconMenu_title"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:id="@+id/iconPackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/chooseAppIconMenu_titleBar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:clickable="false"
                    android:text="@string/changeAppIconMenu_noIconPacks"
                    android:textColor="@color/white_low"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:id="@+id/chooseAppIconMenu_recoverOriginalIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/icon_recover"
                    android:contentDescription="@string/recoverOriginalName_icon_description"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:singleLine="true"
                    android:text="@string/changeAppIconMenu_recoverOriginalIcon"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/chooseIconPackContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>