<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/chooseAppIconMenu_titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="32dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="@string/app_icon_description"
                android:src="@mipmap/main_icon" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/backChooseAppIconMenuButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="18dp"
                android:visibility="gone"
                android:background="@drawable/icon_arrow_left"
                android:contentDescription="@string/back_button_description"
                tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/closeChooseAppIconMenuButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="18dp"
                android:background="@drawable/icon_close"
                android:contentDescription="@string/close_button_description"
                tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chooseIconContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="32dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/chooseAppIconMenu_titleBar">

            <EditText
                android:id="@+id/searchIconBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="none"
                android:background="@drawable/background_search_bar"
                android:drawableStart="@drawable/icon_search"
                android:drawablePadding="12dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/changeAppIconMenu_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white_lower"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
             />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@+id/searchIconBar"
             />

            <TextView
                android:id="@+id/noSearchResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="false"
                android:text="@string/changeAppIconMenu_noSearchResults"
                android:textColor="@color/white_low"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/view"
                 />

            <TextView
                android:id="@+id/searchTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="false"
                android:text="@string/changeAppIconMenu_searchTip"
                android:textColor="@color/white_extra_low"
                android:visibility="gone"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/noSearchResults"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/iconList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintHeight_max="500dp"
                app:layout_constraintTop_toBottomOf="@+id/searchTip"
                >

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/chooseIconPackContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/chooseAppIconMenu_titleBar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:singleLine="true"
                android:text="@string/changeAppIconMenu_title"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/noIconPacksMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="false"
                android:text="@string/changeAppIconMenu_noIconPacks"
                android:textColor="@color/white_low"
                android:textSize="16sp" />

            <com.google.android.flexbox.FlexboxLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iconPackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:alignItems="stretch"
                app:alignContent="stretch"
                app:showDivider="middle"
                app:dividerDrawable="@drawable/divider"
                app:layout_constraintTop_toBottomOf="@+id/chooseAppIconMenu_titleBar" >

            </com.google.android.flexbox.FlexboxLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:id="@+id/chooseAppIconMenu_recoverOriginalIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/icon_recover"
                    android:contentDescription="@string/recoverOriginalName_icon_description"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:singleLine="true"
                    android:text="@string/changeAppIconMenu_recoverOriginalIcon"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@android:color/transparent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>